# bagua-net

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
cc/: Makefile  bagua_net.cc  bagua_net.h
cc/v3/: nccl_net_v3.cc  nccl_net_v3.h
cc/v4/: bagua_net_v4.cc  nccl_net_v4.cc  nccl_net_v4.h
src/: bagua_net.rs  lib.rs  utils.rs
src/implement/: mod.rs  nthread_per_socket_backend.rs  tokio_backend.rs
